--- a/src/index.scss
+++ b/src/index.scss
@@ -32,3 +32,9 @@ button {
   display: block;
   clear: both;
 }
+
+.oneLine {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
